# rPPG

./: CMakeLists.txt  android.toolchain.cmake  build_android_cmake.sh  build_x86.sh  build_x86_cmake.sh  cam-play.c  pulse-v4l2.c  pulse-v4l2.cv1.c  v4l2-cap.c  v4l2-play.1.c  v4l2-play.c
CMAKE/: CheckDSPLIBCompilerFlags.cmake  dsplib-config-build.cmake.in  dsplib-config-install.cmake.in  dsplib-config-version.cmake.in
